Adds new arvix preprint

--- a/pubs.html
+++ b/pubs.html
@@ -27,6 +27,14 @@
 
     <h3>2019</h3>
     <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1907.04002">Characterizing Bitcoin Donations to Open Source Software on GitHub</a></span></div>
+      <small>
+        Yury Zhauniarovich, Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:1907.04002, Jul 2019</div>
+      </small>
+    </p>
+    <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1809.06044">BlockTag: Design and Applications of a Tagging System for Blockchain Analysis</a></span></div>
       <small>
         Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
