--- a/research.html
+++ b/research.html
@@ -184,7 +184,7 @@
 
         <li id="10">
           <p>
-            <div><span class="pdf"><a href="https://arxiv.org/pdf/1801.07501.pdf">When A Small Leak Sinks A Great Ship: Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
+            <div><span class="pdf"><a href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
             <small>
               Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
               <div class=ref><i>arXiv preprint</i><br>
