--- a/pubs.html
+++ b/pubs.html
@@ -54,7 +54,7 @@
     </p>
   
     <p>
-      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">When A Small Leak Sinks A Great Ship: Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
       <small>
         Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
         <div class=ref><i>arXiv preprint</i><br>
