--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+    
+  <p class="indent">
+    <div class="underlined">Sep, 2019</div>
+    I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
+    I'm presenting to the folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
+  </p>
 
   <p class="indent">
     <div class="underlined">Jun, 2019</div>
