--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <p class="indent">
     <div class="underlined">Sep, 2019</div>
     I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
-    I'm presenting to the folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
+    I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.
   </p>
 
   <p class="indent">
