--- a/news.html
+++ b/news.html
@@ -22,6 +22,12 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+    
+    <p class="indent">
+      <div class="date">Sep, 2019</div>
+      I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
+      I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.
+    </p>
 
     <p class="indent">
       <div class="date">Jun, 2019</div>
