--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
   <p class="indent">
     <div class="underlined">Sep, 2019</div>
     I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
-    I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.
+    I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
+    I'm giving a presentation about ongoing CIBR research at <a href="http://english.pku.edu.cn/">Peking University</a>.</br>
+    I'm giving a presentation about ongoing CIBR research at <a href="https://english.bupt.edu.cn/">BUPT</a>.
   </p>
 
   <p class="indent">
@@ -150,7 +152,7 @@
     
   <p class="indent">
     <div class="underlined">Feb, 2019</div>
-    I'm presenting to the folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
+    I'm presenting to folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
   </p>
   
   <p class="indent">
