--- a/news.html
+++ b/news.html
@@ -26,7 +26,9 @@
     <p class="indent">
       <div class="date">Sep, 2019</div>
       I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
-      I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.
+      I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
+      I'm giving a presentation about ongoing CIBR research at <a href="http://english.pku.edu.cn/">Peking University</a>.</br>
+      I'm giving a presentation about ongoing CIBR research at <a href="https://english.bupt.edu.cn/">BUPT</a>.
     </p>
 
     <p class="indent">
