--- a/news.html
+++ b/news.html
@@ -27,8 +27,8 @@
       <div class="date">Sep, 2019</div>
       I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
       I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
-      I'm giving a presentation about ongoing CIBR research at <a href="http://english.pku.edu.cn/">Peking University</a>.</br>
-      I'm giving a presentation about ongoing CIBR research at <a href="https://english.bupt.edu.cn/">BUPT</a>.
+      I'm giving a presentation at <a href="http://english.pku.edu.cn/">Peking University</a> about blockchain analytics</br>
+      I'm giving a presentation at <a href="https://english.bupt.edu.cn/">BUPT</a> about blockchain analytics.
     </p>
 
     <p class="indent">
@@ -38,12 +38,12 @@
     
     <p class="indent">
       <div class="date">Feb, 2019</div>
-      I'm presenting to the folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
+      I'm presenting to folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR research.
     </p>
     
     <p class="indent">
       <div class="date">Jan, 2019</div>
-      I'm leading the<a href="https://qcri.github.io/cibr"> new blockchain research initiative</a> at QCRI.
+      I'm leading the new <a href="https://qcri.github.io/cibr">blockchain research initiative</a> at QCRI.
     </p>
 
     <p class="indent">
