--- a/news.html
+++ b/news.html
@@ -27,8 +27,7 @@
       <div class="date">Sep, 2019</div>
       I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
       I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
-      I'm giving a talk at <a href="http://english.pku.edu.cn/">Peking University</a> about blockchain analytics</br>
-      I'm giving a talk at <a href="https://english.bupt.edu.cn/">BUPT</a> about blockchain analytics.
+      I'm giving a talk at <a href="http://english.pku.edu.cn/">Peking University</a> and <a href="https://english.bupt.edu.cn/">BUPT</a> about blockchain analytics.
     </p>
 
     <p class="indent">
