--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
   </h2>
     
   <p class="indent">
+    <div class="underlined">Oct, 2019</div>
+    I'm attending <a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a>. See you in Amsterdam!
+  </p>
+    
+  <p class="indent">
     <div class="underlined">Sep, 2019</div>
     I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
     I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
