--- a/news.html
+++ b/news.html
@@ -24,6 +24,11 @@
     <div class=spacer></div>
     
     <p class="indent">
+      <div class="date">Oct, 2019</div>
+      I'm attending <a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a>. See you in Amsterdam!
+    </p>
+    
+    <p class="indent">
       <div class="date">Sep, 2019</div>
       I'm attending <a href="https://www.raid-2019.org/">RAID 2019</a>. See you in Beijing!</br>
       I'm meeting with folks at <a href="https://peckshield.com">PeckShield</a> about ongoing CIBR collaboration.</br>
