--- a/pubs.html
+++ b/pubs.html
@@ -27,6 +27,14 @@
 
     <h3>2019</h3>
     <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244"> Investigating MMM Ponzi scheme on Bitcoin</a></span></div>
+      <small>
+        Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv: 1910.12244, Oct 2019</div>
+      </small>
+    </p>
+    <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1907.04002">Characterizing Bitcoin Donations to Open Source Software on GitHub</a></span></div>
       <small>
         Yury Zhauniarovich, Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
