--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
     
   <p class="indent">
     <div class="underlined">Oct, 2019</div>
-    I'm attending <a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a>. See you in Amsterdam!
+    I'm attending <a href="https://conferences.sigcomm.org/imc/2019/">IMC 2019</a>. See you in Amsterdam!</br>
+    I'm speaking as a panelist at <a href="http://www.qu.edu.qa/conference/CSET-2019">CSET 2019</a> about Cybersecurity and FinTech.
   </p>
     
   <p class="indent">
