--- a/pubs.html
+++ b/pubs.html
@@ -27,7 +27,7 @@
 
     <h3>2019</h3>
     <p>
-      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244"> Investigating MMM Ponzi scheme on Bitcoin</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244"> Investigating MMM Ponzi Scheme on Bitcoin</a></span></div>
       <small>
         Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
         <div class=ref><i>arXiv preprint</i><br>
