--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Research Scientist, <a href="http://qcri.com/">QCRI</a><br>
+      <td>Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a><br>
           Research Lead, <a href="https://qcri.github.io/cibr">CIBR</a>
       </td>
     </tr>
