--- a/pubs.html
+++ b/pubs.html
@@ -24,6 +24,16 @@
       <a href="http://dblp.uni-trier.de/pers/hd/b/Boshmaf:Yazan">&raquo;&nbsp;dblp</a>
       </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
+    
+    <h3>2020</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
+      <small>
+        Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
+        <div class=ref><i>Elsevier Computers &amp; Security</i><br>
+        Volume 89, Article 101684, Feb 2020</div>
+      </small>
+    </p>
 
     <h3>2019</h3>
     <p>
@@ -58,15 +68,6 @@
         Ildar Muslukhov, Yazan Boshmaf, and Konstantin Beznosov
         <div class=ref><i>Proc. of 11th ACM Asia Conference on Computer and Communications Security</i><br>
         AsiaCCS &rsquo;18, Songdo, Incheon, Korea, Jun 2018</div>
-      </small>
-    </p>
-  
-    <p>
-      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
-      <small>
-        Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
-        <div class=ref><i>arXiv preprint</i><br>
-        arXiv:1801.07501, Jan, 2018</div>
       </small>
     </p>
     
