--- a/research.html
+++ b/research.html
@@ -187,8 +187,8 @@
             <div><span class="pdf"><a href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
             <small>
               Husam Al Jawaheri, Mashael Al Sabah, Yazan Boshmaf, and Aiman Erbad
-              <div class=ref><i>arXiv preprint</i><br>
-              arXiv:1801.07501, Jan, 2018</div>
+              <div class=ref><i>Elsevier Computers &amp; Security</i><br>
+              Volume 89, Article 101684, Feb 2020</div>
             </small>
           </p>
         </li>
