--- a/pubs.html
+++ b/pubs.html
@@ -34,16 +34,16 @@
         Volume 89, Article 101684, Feb 2020</div>
       </small>
     </p>
-
-    <h3>2019</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244"> Investigating MMM Ponzi Scheme on Bitcoin</a></span></div>
       <small>
         Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
-        <div class=ref><i>arXiv preprint</i><br>
-          arXiv: 1910.12244, Oct 2019</div>
+        <div class=ref><i>Proc. of 15th ACM Asia Conference on Computer and Communications Security</i><br>
+        AsiaCCS &rsquo;20, Taipei, Taiwan, Jun 2020</div>
       </small>
     </p>
+
+    <h3>2019</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1907.04002">Characterizing Bitcoin Donations to Open Source Software on GitHub</a></span></div>
       <small>
