--- a/research.html
+++ b/research.html
@@ -218,11 +218,11 @@
         <li id="13">
           <p>
             <div><span class="pdf"><a href="https://arxiv.org/pdf/1910.12244">Investigating MMM Ponzi Scheme on Bitcoin</a></span></div>
-            <small>
-              Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
-              <div class=ref><i>arXiv preprint</i><br>
-              arXiv:1910.12244, Oct 2019</div>
-            </small>
+           <small>
+             Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
+             <div class=ref><i>Proc. of 15th ACM Asia Conference on Computer and Communications Security</i><br>
+             AsiaCCS &rsquo;20, Taipei, Taiwan, Jun 2020</div>
+           </small>
           </p>
         </li>
 
