Added recent updated to research

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
 
   <p>
     <div class="underlined">Cryptocurrencies and Blockchains</div>
-    (Mis)use of Bitcoin, off-the-counter marketplaces, blockchain analysis
+    (Mis)use of Bitcoin, blockchain analytics
+  </p>
+
+  <p>
+    <div class="underlined">Dark Web (over Tor)</div>
+    Structure and content analytics, marketplaces
   </p>
 
   <p>
     <div class="underlined">Applied Cryptography</div>
     Mobile data-at-rest encryption, (mis)use of crypto APIs
-  </p>
-
-  <p>
-    <div class="underlined">Big Data and Security Analytics</div>
-    Enterprise logs, Internet-wide IP scanning
   </p>
 
   <p>
@@ -136,6 +136,11 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
+
+  <p class="indent">
+    <div class="underlined">Oct, 2020</div>
+    I'm presenting at <a href="https://dl.acm.org/doi/proceedings/10.1145/3320269">AsiaCCS 2020</a>. See you online!</br>
+  </p>
     
   <p class="indent">
     <div class="underlined">Oct, 2019</div>
@@ -171,6 +176,15 @@
     </span>
     Selected publications
   </h2>
+
+  <p>
+    <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244">Investigating MMM Ponzi Scheme on Bitcoin</a></span></div>
+    <small>
+      Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
+      <div class=ref><i>Proc. of 15th ACM Asia Conference on Computer and Communications Security</i><br>
+      AsiaCCS &rsquo;20, Taipei, Taiwan, Oct 2020</div>
+    </small>
+  </p>
   
   <p>
     <div class="title"><span class="pdf"><a class=title href="http://lersse-dl.ece.ubc.ca/record/324/files/binsight-asiaccs-2018.pdf">Source Attribution of Cryptographic API Misuse in Android Applications</a></span></div>
