--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+
+    <p class="indent">
+      <div class="date">Oct, 2020</div>
+      I'm presenting at <a href="https://dl.acm.org/doi/proceedings/10.1145/3320269">AsiaCCS 2020</a>. See you online!</br>
+    </p>
     
     <p class="indent">
       <div class="date">Oct, 2019</div>
