--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
       <td><a id="email">yboshmaf at hbku edu qa</a> &nbsp;</td>
     </tr>
     <tr>
+      <td class="l">social:</td>
+      <td>Message me on <a href="https://twitter.com/boshmaf" target="_blank">Twitter</a> or <a href="https://linkedin.com/in/boshmaf" target="_blank">LinkedIn</a></td>
+    </tr>
+    <tr>
       <td class="l">office:</td>
       <td><span id="phone">+974-445-[four one five five two]</span></td>
     </tr>
