--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </tr>
     <tr>
       <td class="l">social:</td>
-      <td>Message me on <a href="https://twitter.com/boshmaf" target="_blank">Twitter</a> or <a href="https://linkedin.com/in/boshmaf" target="_blank">LinkedIn</a></td>
+      <td><a href="https://twitter.com/boshmaf" target="_blank">Twitter</a>, <a href="https://linkedin.com/in/boshmaf" target="_blank">LinkedIn</a></td>
     </tr>
     <tr>
       <td class="l">office:</td>
