--- a/research.html
+++ b/research.html
@@ -169,7 +169,7 @@
       focusing on applications related to privacy research and law enforcement. Existing blockchain analysis systems,
       such as BlockSci, focus on efficiently analyzing on-chain data, with no or limited support for auxiliary data. To
       address this limitation, I am currently building and improving Toshi: A full-stack search, tagging, and
-      analysis system for blockchains [<a href="#10">10</a>,<a href="#11">11</a>]. The challenge is to find a way to
+      analysis system for blockchains [<a href="#10">10</a>]. The challenge is to find a way to
       systematically incorporate auxiliary data into the
       blockchain so that a new class of queries, which involve clustering, linking, and searching on/off-chain data, can
       be performed using existing analysis systems. Toshi addresses this challenge by annotating on-chain data with
@@ -183,24 +183,21 @@
       well-defined and extendable interfaces between them. This allows Toshi to provide quick, partial answers to
       high-level queries like: "which Twitter accounts made Bitcoin payments to Silk Road."</p>
 
-    <p>As a proof of concept, we deployed Toshi in 2019 to investigate user privacy in anonymity networks [<a
-        href="#12">12</a>],
-      where we were able to
-      deanonymize Tor hidden service users, and to anaylze
-      fraudlent transactions on Bitcoin [<a href="#13">13</a>], where we were able to under the operation of MMM, one of
-      the world's largest
-      Ponzi schemes. My ongoing work with Toshi has led to a private presentation to The
-      Office of Technology Research and Investigation at the U.S. Federal Trade Commission, multi-year, multi-million
-      dollar research grants from Qatar National Research Fund, and an international news
+    <p>As a proof of concept, we deployed Toshi in 2019 to investigate emerging security and privacy issues arising from 
+      analyzing off/on-chain data of popular technologies. In particular, we showed that one can deanonymize Tor hidden 
+      service users [<a href="#11">11</a>], uncover Ponzi schemes on Bitcoin [<a href="#12">12</a>], and identify users 
+      who made donations to open-source projects on GitHub[<a href="#13">13</a>]. My ongoing work with Toshi has led 
+      to a private presentation to The Office of Technology Research and Investigation at the U.S. Federal Trade Commission, 
+      multi-year, multi-million dollar research grants from Qatar National Research Fund, and an international news 
       coverage.</p>
 
     <div class="title">Moving Forward: Towards a Private, Secure, and Decentralized Web</div>
-    <p>For the short term, I plan to continue working on Toshi, focusing on fraud detection and transactions risk
-      scoring. I then plan to deploy Toshi as an interactive
-      blockchain analytics service, with dashboards displaying real-time results of important, user-defined queries.
-      Based on feedback from the U.S. Federal Trade Commission and Qatar Financial Center Regulatory Authority, such
-      capabilities are extremely helpful to protect customers, comply with Know Your Customer and Anti-Money Laundering
-      laws, and draft new, investor-friendly cryptocurrency regulations.</p>
+    <p>For the short term, I plan to continue working on Toshi, focusing on fraud detection and transaction risk
+      predictoin. I then plan to deploy Toshi as an interactive blockchain analytics service, with dashboards displaying 
+      real-time results of important, user-defined queries. Based on feedback from the U.S. Federal Trade Commission 
+      and Qatar Financial Center Regulatory Authority, such capabilities are extremely helpful to protect customers, 
+      comply with Know Your Customer and Anti-Money Laundering laws, and draft new, investor-friendly cryptocurrency 
+      regulations.</p>
 
     <p>For the longer term, I plan to analyze the privacy and security of general-purpose, decentralized Internet
       platforms, such as Ethereum, EOS, and IPFS, which are currently used to build next-generation websites in the new
@@ -344,18 +341,6 @@
 
       <li id="11">
         <p>
-        <div><span class="pdf"><a href="https://arxiv.org/pdf/1907.04002">Characterizing Bitcoin Donations to Open
-              Source Software on GitHub</a></span></div>
-        <small>
-          Yury Zhauniarovich, Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
-          <div class=ref><i>arXiv preprint</i><br>
-            arXiv:1907.04002, Jul 2019</div>
-        </small>
-        </p>
-      </li>
-
-      <li id="12">
-        <p>
         <div><span class="pdf"><a href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users
               Through Bitcoin Transactions Analysis</a></span></div>
         <small>
@@ -366,7 +351,7 @@
         </p>
       </li>
 
-      <li id="13">
+      <li id="12">
         <p>
         <div><span class="pdf"><a href="https://arxiv.org/pdf/1910.12244">Investigating MMM Ponzi Scheme on
               Bitcoin</a></span></div>
@@ -374,6 +359,18 @@
           Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
           <div class=ref><i>Proc. of 15th ACM Asia Conference on Computer and Communications Security</i><br>
             AsiaCCS &rsquo;20, Taipei, Taiwan, Oct 2020</div>
+        </small>
+        </p>
+      </li>
+
+      <li id="13">
+        <p>
+        <div><span class="pdf"><a href="https://arxiv.org/pdf/1907.04002">Characterizing Bitcoin Donations 
+          to Open Source Software on GitHub</a></span></div>
+        <small>
+          Yury Zhauniarovich, Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
+          <div class=ref><i>arXiv preprint</i><br>
+            arXiv:1907.04002, Jul 2019</div>
         </small>
         </p>
       </li>
