--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <tr>
       <td class="l">now:</td>
       <td>Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a><br>
-          Research Lead, <a href="https://qcri.github.io/cibr">CIBR</a>
+          Research Lead, <a href="https://cibr.qcri.org">CIBR</a>
       </td>
     </tr>
     <tr>
