Added new events

--- a/news.html
+++ b/news.html
@@ -24,6 +24,12 @@
     <div class=spacer></div>
 
     <p class="indent">
+      <div class="date">Oct, 2021</div>
+      I'm presenting at our 3rd <a href="https://cibr.qcri.org/doc/workshop/3rd_cibr_workshop.pdf">CIBR Workshop</a>. See you at QCRI!</br>
+      I'm giving a talk at <a href="https://www.qiib.com.qa/Press/Details/307">QIIB</a> about virtual currencies and FinTech.
+    </p>
+
+    <p class="indent">
       <div class="date">Oct, 2020</div>
       I'm presenting at <a href="https://dl.acm.org/doi/proceedings/10.1145/3320269">AsiaCCS 2020</a>. See you online!</br>
     </p>
