--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
   </h2>
 
   <p>
+    <div class="title"><span class="pdf"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
+    <small>
+      Mashael Al Sabah, Mohamed Nabeel, Euijin Choo, and Yazan Boshmaf 
+      <div class=ref><i>Proc. of 25th International Symposium on Research in Attacks, Intrusions and Defenses</i><br>
+      RAID &rsquo;22, Limassol, Cyprus, Oct 2022</div>
+    </small>
+  </p>
+
+  <p>
     <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1910.12244">Investigating MMM Ponzi Scheme on Bitcoin</a></span></div>
     <small>
       Yazan Boshmaf, Charitha Elvitigala, Husam Al Jawaheri, Primal Wijesekera, and Mashael Al Sabah
