--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   </h2>
 
   <p>
-    <div class="title"><span class="pdf"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
+    <div class="title"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
     <small>
       Mashael Al Sabah, Mohamed Nabeel, Euijin Choo, and Yazan Boshmaf 
       <div class=ref><i>Proc. of 25th International Symposium on Research in Attacks, Intrusions and Defenses</i><br>
