--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div class="title"><span class="pdf"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
     <small>
       Mashael Al Sabah, Mohamed Nabeel, Euijin Choo, and Yazan Boshmaf 
-      <div class=ref><i>Proc. of 25th International Symposium on Research in Attacks, Intrusions and Defenses</i><br>
+      <div class=ref><i>Proc. of 25th Symposium on Research in Attacks, Intrusions and Defenses</i><br>
       RAID &rsquo;22, Limassol, Cyprus, Oct 2022</div>
     </small>
   </p>
