--- a/pubs.html
+++ b/pubs.html
@@ -25,6 +25,16 @@
       </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
     
+    <h3>2022</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
+      <small>
+        Mashael Al Sabah, Mohamed Nabeel, Euijin Choo, and Yazan Boshmaf 
+        <div class=ref><i>Proc. of 25th Symposium on Research in Attacks, Intrusions and Defenses</i><br>
+        RAID &rsquo;22, Limassol, Cyprus, Oct 2022</div>
+      </small>
+    </p>
+    
     <h3>2020</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/1801.07501.pdf">Deanonymizing Tor Hidden Service Users Through Bitcoin Transactions Analysis</a></span></div>
