--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+    
+    <p class="indent">
+      <div class="date">Apr, 2022</div>
+      I'm serving on the program committee of <a href="https://spritz.math.unipd.it/events/2022/ACNS_Workshop/index.html">SecMT '22</a>.</br>
+    </p>
 
     <p class="indent">
       <div class="date">Oct, 2021</div>
