Updates CV and publications

--- a/pubs.html
+++ b/pubs.html
@@ -34,6 +34,14 @@
         RAID &rsquo;22, Limassol, Cyprus, Oct 2022</div>
       </small>
     </p>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2209.07202.pdf">Dizzy: Large-Scale Crawling and Analysis of Onion Services</a></span></div>
+      <small>
+        Isuranga Perera and Yazan Boshmaf
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2209.07202, Sep 2022</div>
+      </small>
+    </p>
     
     <h3>2020</h3>
     <p>
