--- a/research.html
+++ b/research.html
@@ -160,7 +160,7 @@
       fueling new blockchain-based Web systems, such as Filecoin for data storage and Steemit for social networking.</p>
 
     <div style="text-align: center;">
-      <img src="img/toshi.png" alt="Toshi's high-level architecture" style="width:620px;" />
+      <img src="img/cibr-lab.png" alt="CIBR-Labs's high-level architecture" style="width:620px;" />
       <br><span><b>Figure 3.</b> CIBR's high-level architecture</span>
     </div>
 
@@ -180,17 +180,17 @@
       analytics have separate component with well-defined and extendable interfaces between them. This allows CIBR-Lab to provide quick, 
       partial answers to high-level queries like: "which Twitter accounts made Bitcoin payments to Silk Road."</p>
 
-    <p>As a proof of concept, we deployed Toshi in 2019 to investigate emerging security and privacy issues arising from 
+    <p>As a proof of concept, we deployed CIBR-Lab in 2019 to investigate emerging security and privacy issues arising from 
       analyzing off/on-chain data of popular technologies. In particular, we showed that one can deanonymize Tor hidden 
       service users [<a href="#12">12</a>], uncover Ponzi schemes on Bitcoin [<a href="#13">13</a>], and identify users 
-      who made donations to open-source projects on GitHub[<a href="#14">14</a>]. My ongoing work with Toshi has led 
+      who made donations to open-source projects on GitHub[<a href="#14">14</a>]. My ongoing work with CIBR-Lab has led 
       to a private presentation to The Office of Technology Research and Investigation at the U.S. Federal Trade Commission, 
       multi-year, multi-million dollar research grants from Qatar National Research Fund, and an international news 
       coverage.</p>
 
     <div class="title">Moving Forward: Towards a Private, Secure, and Decentralized Web</div>
-    <p>For the short term, I plan to continue working on Toshi, focusing on fraud detection and transaction risk
-      predictoin. I then plan to deploy Toshi as an interactive blockchain analytics service, with dashboards displaying 
+    <p>For the short term, I plan to continue working on CIBR-Lab, focusing on fraud detection and transaction risk
+      predictoin. I then plan to deploy CIBR-Lab as an interactive blockchain analytics service, with dashboards displaying 
       real-time results of important, user-defined queries. Based on feedback from the U.S. Federal Trade Commission 
       and Qatar Financial Center Regulatory Authority, such capabilities are extremely helpful to protect customers, 
       comply with Know Your Customer and Anti-Money Laundering laws, and draft new, investor-friendly cryptocurrency 
@@ -329,8 +329,9 @@
               System for Blockchain Analysis</a></span></div>
         <small>
           Yazan Boshmaf, Husam Al Jawaheri, and Mashael Al Sabah
-          <div class=ref><i>arXiv preprint</i><br>
-            arXiv:2209.07202, Sep 2022</div>
+          <div class=ref><i>Proc. of 34th International Conference on ICT Systems Security and Privacy
+            Protection</i><br>
+            IFIP SEC &rsquo;19, Lisbon, Portugal, Jun 2019</div>
         </small>
         </p>
       </li>
@@ -340,9 +341,8 @@
         <div><span class="pdf"><a href="https://arxiv.org/pdf/2209.07202.pdf">Dizzy: Large-Scale Crawling and Analysis of Onion Services</a></span></div>
         <small>
           Isuranga Perera and Yazan Boshmaf
-          <div class=ref><i>Proc. of 34th International Conference on ICT Systems Security and Privacy
-              Protection</i><br>
-            IFIP SEC &rsquo;19, Lisbon, Portugal, Jun 2019</div>
+          <div class=ref><i>arXiv preprint</i><br>
+            arXiv:2209.07202, Sep 2022</div>
         </small>
         </p>
       </li>
