--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </h2>
 
   <p>
-    <div class="title"><span class="pdf"><a class=title href="/">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
+    <div class="title"><span class="pdf"><a class=title href="https://dl.acm.org/doi/10.1145/3545948.3545958">Content-Agnostic Detection of Phishing Domains using Certificate Transparency and Passive DNS</a></span></div>
     <small>
       Mashael Al Sabah, Mohamed Nabeel, Euijin Choo, and Yazan Boshmaf 
       <div class=ref><i>Proc. of 25th Symposium on Research in Attacks, Intrusions and Defenses</i><br>
