Updates paper info

--- a/pubs.html
+++ b/pubs.html
@@ -37,7 +37,7 @@
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2209.07202.pdf">Dizzy: Large-Scale Crawling and Analysis of Onion Services</a></span></div>
       <small>
-        Isuranga Perera and Yazan Boshmaf
+        Yazan Boshmaf, Isuranga Perera, Udesh Kumarasinghe, Sajitha Liyanage, and Husam Al Jawaheri
         <div class=ref><i>arXiv preprint</i><br>
           arXiv:2209.07202, Sep 2022</div>
       </small>
