--- a/research.html
+++ b/research.html
@@ -340,7 +340,7 @@
         <p>
         <div><span class="pdf"><a href="https://arxiv.org/pdf/2209.07202.pdf">Dizzy: Large-Scale Crawling and Analysis of Onion Services</a></span></div>
         <small>
-          Isuranga Perera and Yazan Boshmaf
+          Yazan Boshmaf, Isuranga Perera, Udesh Kumarasinghe, Sajitha Liyanage, and Husam Al Jawaheri
           <div class=ref><i>arXiv preprint</i><br>
             arXiv:2209.07202, Sep 2022</div>
         </small>
