updates news and cv

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
   </h2>
     
   <p class="indent">
-    <div class="underlined">Apr, 2022</div>
-    I'm serving on the program committee of <a href="https://spritz.math.unipd.it/events/2022/ACNS_Workshop/index.html">SecMT '22</a>.</br>
+    <div class="underlined">Aug, 2023</div>
+    I'm presenting at <a href="https://www.ares-conference.eu/">ARES 2023</a>. See you in Benevento!</br>
   </p>
 
   <h2>
