--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
     <h1>News</h1>
     <h2><a href="index.html">&laquo;&nbsp;Home</a></h2>
     <div class=spacer></div>
+
+    <p class="indent">
+      <div class="date">Aug, 2023</div>
+      I'm presenting at <a href="https://www.ares-conference.eu/">ARES 2023</a>. See you in Benevento!</br>
+    </p>
     
     <p class="indent">
       <div class="date">Apr, 2022</div>
