--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div>Research Intern, <a href="http://www.tid.es">Telefonica</a></div>
         <div>Research Intern, <a href="https://research.fb.com">Facebook</a></div>
         <div>Research Intern, <a href="https://www.sophos.com">Sophos</a></div>
-        <div>Research Intern, <a href="https://www.hlrs.de/home">HLRS</a></div>
-        <div>Software Engineer, <a href="https://www.sap.com">SAP</a></div>
+        <div>Research Engineer, <a href="https://www.hlrs.de/home">HLRS</a></div>
+        <div>Research Engineer, <a href="https://www.sap.com">SAP</a></div>
         <div>Software Engineer, <a href="https://www.intel.com">Intel</a></div>
         <div>Research Assistant, <a href="https://www.ipvs.uni-stuttgart.de/index1.html?__locale=en">Uni Stuttgart</a></div>
         <div>Infrastructure Consultant, <a href="https://enterprise.microsoft.com/en-us/services/">Microsoft</a></div>
