Adds a new arxiv paper

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
   <p>I'm interested in the security and privacy of social and information networks, with an emphasis on problems that broadly impact the way people use technology and the Internet.</p>
 
   <p>
+    <div class="underlined">AI Safety and Security (LLMs)</div>
+    Blackbox evaluation, poisoning attacks, fact checking, RAG for security
+  </p>
+
+  <p>
     <div class="underlined">Cryptocurrencies and Blockchains</div>
     (Mis)use of Bitcoin, blockchain analytics
   </p>
@@ -133,7 +138,7 @@
 
   <p>
     <div class="underlined">Web Automation</div>
-    Socialbots, single sign-on
+    Socialbots, single sign-on, privacy
   </p>
 
   <h2>
