--- a/pubs.html
+++ b/pubs.html
@@ -24,6 +24,16 @@
       <a href="http://dblp.uni-trier.de/pers/hd/b/Boshmaf:Yazan">&raquo;&nbsp;dblp</a>
       </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
+
+    <h3>2024</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2405.20455">DepsRAG: Towards Managing Software Dependencies using Large Language Models</a></span></div>
+      <small>
+        Mohannad Alhanahnah, Yazan Boshmaf, and Benoit Baudry
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2405.20455, Jun 2024</div>
+      </small>
+    </p>
     
     <h3>2023</h3>
     <p>
