Added a new pub

--- a/pubs.html
+++ b/pubs.html
@@ -27,6 +27,14 @@
 
     <h3>2024</h3>
     <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2407.11259">SoK: Software Debloating Landscape and Future Directions</a></span></div>
+      <small>
+        Mohannad Alhanahnah, Yazan Boshmaf, and Ashish Gehani
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2407.11259, Jul 2024</div>
+      </small>
+    </p>
+    <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2405.20455">DepsRAG: Towards Managing Software Dependencies using Large Language Models</a></span></div>
       <small>
         Mohannad Alhanahnah, Yazan Boshmaf, and Benoit Baudry
