--- a/pubs.html
+++ b/pubs.html
@@ -30,16 +30,17 @@
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2407.11259">SoK: Software Debloating Landscape and Future Directions</a></span></div>
       <small>
         Mohannad Alhanahnah, Yazan Boshmaf, and Ashish Gehani
-        <div class=ref><i>arXiv preprint</i><br>
-          arXiv:2407.11259, Jul 2024</div>
+        <div class=ref><i>Proc. of the 2024 Workshop on Forming an Ecosystem Around Software Transformation</i><br>
+          FEAST &rsquo;24, ACM CCS &rsquo;24 Workshops, Salt Lake City, USA, Jul 2024</div>
       </small>
     </p>
     <p>
-      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2405.20455">DepsRAG: Towards Managing Software Dependencies using Large Language Models</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2405.20455">DepsRAG: Towards Agentic Reasoning and Planning for Software Dependency Management</a></span></div>
       <small>
-        Mohannad Alhanahnah, Yazan Boshmaf, and Benoit Baudry
-        <div class=ref><i>arXiv preprint</i><br>
-          arXiv:2405.20455, Jun 2024</div>
+        Mohannad Alhanahnah and Yazan Boshmaf
+        <div class=ref><i>The First Workshop on Open-World Agents
+        </i><br>
+        OWA &rsquo;24, NeurIPS &rsquo;24 Workshops, Vancouver, Canada, Dec 2024</div>
       </small>
     </p>
     
