--- a/pubs.html
+++ b/pubs.html
@@ -25,6 +25,16 @@
       </span><a href="index.html">&laquo;&nbsp;Home</a>
     </h2>
 
+    <h3>2025</h3>
+    <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2501.13944">Fanar: An Arabic-Centric Multimodal Generative AI Platform</a></span></div>
+      <small>
+        Ummar Abbas, Mohammad Shahmeer Ahmad, Firoj Alam, Enes Altinisik, Ehsannedin Asgari, Yazan Boshmaf et al.
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2501.13944, Jan 2025</div>
+      </small>
+    </p>
+
     <h3>2024</h3>
     <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2407.11259">SoK: Software Debloating Landscape and Future Directions</a></span></div>
