--- a/pubs.html
+++ b/pubs.html
@@ -27,6 +27,14 @@
 
     <h3>2025</h3>
     <p>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2504.14985">aiXamine: LLM Safety and Security Simplified</a></span></div>
+      <small>
+        Fatih Deniz, Dorde Popovic, Yazan Boshmaf, Euisuh Jeong, Minhaj Ahmad, Sanjay Chawla, and Issa Khalil
+        <div class=ref><i>arXiv preprint</i><br>
+          arXiv:2504.14985, Apr 2025</div>
+      </small>
+    </p>
+    <p>
       <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2501.13944">Fanar: An Arabic-Centric Multimodal Generative AI Platform</a></span></div>
       <small>
         Ummar Abbas, Mohammad Shahmeer Ahmad, Firoj Alam, Enes Altinisik, Ehsannedin Asgari, Yazan Boshmaf et al.
