--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <tr>
       <td class="l">before:</td>
       <td>
+        <div>Founder, <a href="https://www.linkedin.com/company/quickbyte-io">QuickByte</a></div>
         <div>Software Engineer, <a href="https://hoostsuite.com">Hootsuite</a></div>
         <div>Research Assistant, <a href="https://ece.ubc.ca">UBC</a></div>
         <div>Research Intern, <a href="https://research.microsoft.com">Microsoft</a></div>
