--- a/pubs.html
+++ b/pubs.html
@@ -27,7 +27,7 @@
 
     <h3>2025</h3>
     <p>
-      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2504.14985">aiXamine: LLM Safety and Security Simplified</a></span></div>
+      <div class="title"><span class="pdf"><a class=title href="https://arxiv.org/pdf/2504.14985">aiXamine: Simplified LLM Safety and Security</a></span></div>
       <small>
         Fatih Deniz, Dorde Popovic, Yazan Boshmaf, Euisuh Jeong, Minhaj Ahmad, Sanjay Chawla, and Issa Khalil
         <div class=ref><i>arXiv preprint</i><br>
