--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a><br>
-          Research Lead, <a href="https://cibr.qcri.org">CIBR</a>
+      <td>Secior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a>
       </td>
     </tr>
     <tr>
