Correct job title in contact table

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Secior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a>
+      <td>Senior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a>
+      </td>
+      <td>Co-Founder and Director, <a href="https://www.mena.ml">MenaML</a>
       </td>
     </tr>
     <tr>
