--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
-      <td>Senior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a>
-      </td>
-      <td>Co-Founder and Director, <a href="https://www.mena.ml">MenaML</a>
+        <div>Senior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a></div>
+        <div>Co-Founder and Director, <a href="https://www.mena.ml">MenaML</a></div>
       </td>
     </tr>
     <tr>
