--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <table cellpadding="0" cellspacing="0"><tr><td id="border">
   <table cellpadding="0" cellspacing="0"><tr><td class="column" id="left">
 
-  <img width="336" src="img/boshmaf.jpg" alt="Yazan Boshmaf">
+  <img width="336" src="img/boshmaf-01.jpg" alt="Yazan Boshmaf">
   <h1><a href="https://boshmaf.github.io">Yazan Boshmaf</a></h1>
   <div id="title">
     <div>Researcher, writer, developer, and hacker.</div>
@@ -52,6 +52,7 @@
   <table id="contact" cellpadding="0" cellspacing="0">
     <tr>
       <td class="l">now:</td>
+      <td>
         <div>Senior Research Scientist, <a href="https://www.hbku.edu.qa/en/qcri">QCRI</a></div>
         <div>Co-Founder and Director, <a href="https://www.mena.ml">MenaML</a></div>
       </td>
@@ -146,11 +147,16 @@
     <span class="morelinks"><a href="news.html">&raquo;&nbsp;older</a></span>
     Latest news
   </h2>
-    
+
   <p class="indent">
-    <div class="underlined">Aug, 2023</div>
-    I'm presenting at <a href="https://www.ares-conference.eu/">ARES 2023</a>. See you in Benevento!</br>
-  </p>
+      <div class="underlined">Dec, 2025</div>
+      I'm attending <a href="https://qatar.worldsummit.ai/">World Summit AI 2025</a>. See you in Doha!</br>
+    </p>
+
+    <p class="indent">
+      <div class="underlined">Jan, 2025</div>
+      I'm attending <a href="https://2025.mena.ml/">MenaML Winter School 2025</a>. See you in Doha!</br>
+    </p>
 
   <h2>
     <span class="morelinks">
