--- a/news.html
+++ b/news.html
@@ -24,6 +24,26 @@
     <div class=spacer></div>
 
     <p class="indent">
+      <div class="date">Dec, 2025</div>
+      I'm attending <a href="https://qatar.worldsummit.ai/">World Summit AI 2025</a>. See you in Doha!</br>
+    </p>
+
+    <p class="indent">
+      <div class="date">Jan, 2025</div>
+      I'm attending <a href="https://2025.mena.ml/">MenaML Winter School 2025</a>. See you in Doha!</br>
+    </p>
+
+    <p class="indent">
+      <div class="date">Feb, 2024</div>
+      I'm attending <a href="https://qatar.websummit.com/">Web Summit Qatar 2024</a>. See you in Doha!</br>
+    </p>
+
+    <p class="indent">
+      <div class="date">Oct, 2023</div>
+      I'm attending <a href="https://www.plusx.ai/2023">Al+X Summit 2023</a>. See you in Zurich!</br>
+    </p>
+
+    <p class="indent">
       <div class="date">Aug, 2023</div>
       I'm presenting at <a href="https://www.ares-conference.eu/">ARES 2023</a>. See you in Benevento!</br>
     </p>
