--- a/news.html
+++ b/news.html
@@ -24,6 +24,11 @@
     <div class=spacer></div>
 
     <p class="indent">
+      <div class="date">Jan, 2026</div>
+      I'm attending <a href="https://mena.ml/">MenaML Winter School 2026</a>. See you in Jaddah!</br>
+    </p>
+
+    <p class="indent">
       <div class="date">Dec, 2025</div>
       I'm attending <a href="https://qatar.worldsummit.ai/">World Summit AI 2025</a>. See you in Doha!</br>
     </p>
